--- a/app/vviews/ecommerce/elements/header.ejs
+++ b/app/vviews/ecommerce/elements/header.ejs
@@ -52,10 +52,14 @@
       </div>
       <div class="col-2 col-sm-4 col-md-3 col-lg-4 text-right">
         <span class="user-menu d-block d-lg-none"><i class="anm anm-user-al" aria-hidden="true"></i></span>
-        <ul class="customer-links list-inline">
-          <li><a href="/user/profile">Tài Khoản</a></li>
-          <li><a href="/user/signin">Đăng Nhập</a></li>
-          <li><a href="/user/signup">Đăng Ký</a></li>
+        <ul class="customer-links list-inline">           
+          <% if (login) { %>
+            <li><a href="/user/profile">Tài Khoản</a></li>
+            <li><a href="/user/logout">Đăng Xuất</a></li>
+            <% } else { %>
+              <li><a href="/user/signin">Đăng Nhập</a></li>
+              <li><a href="/user/signup">Đăng Ký</a></li> 
+          <% } %>
           <!-- <li><a href="">Wishlist</a></li> -->
         </ul>
       </div>
